fix(components/navigation): add nowrap, drag none and select none

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,3 +31,7 @@
     @apply selection:bg-primary/20 !important;
 }
 
+a{
+    -webkit-user-drag: none;
+    @apply select-none
+}
